update: fix sidebar sting align

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -129,7 +129,7 @@ body {
 
 
 #page-container {
-    
+
 }
 
 
@@ -700,4 +700,8 @@ main .dropdown-menu.show.p-0 {
 i.fa.fa-cog {
     color: #c31c2d;
     font-size: 20pt;
+}
+
+.nav-main-cover-item {
+    width: 31px;
 }
